# modality-trace-recorder-plugin

./: Cargo.toml  README.md
.github/workflows/: ci.yml  integration_tests.yml  manual.yml  release.yml
src/: attr.rs  auth.rs  client.rs  command.rs  config.rs  context.rs  context_manager.rs  context_manager_new.rs  deviant_event_parser.rs  error.rs  import.rs  lib.rs  opts.rs  recorder_data.rs  snapshot.rs  trace_recorder.rs  tracing.rs  trc_reader.rs
src/import/: mod.rs  snapshot.rs  streaming.rs
src/snapshot/: attr.rs  mod.rs  trace_recorder.rs
src/streaming/: attr.rs  mod.rs  trace_recorder.rs
test_system/: .gitignore  CMakeLists.txt  README.md  emulate.resc  reflector-config.toml  workspace.toml
test_system/config/: app_config.h  reflector_config_rtt.toml  reflector_config_tcp.toml  workspace.toml
test_system/include/: actuator.h  comms.h  led.h  modality.h  sensor.h  trcStreamPort.h  wire_protocol.h
test_system/include/config/: FreeRTOSConfig.h  app_config.h
test_system/include/config/trc_rtt/: trcConfig.h
test_system/include/config/trc_tcp/: trcStreamPortConfig.h
test_system/linker/: STM32F407VGTx_FLASH.ld
test_system/python/: plot-cpu-load.py  plot-stack-usage.py  plot-stats-cpu-load.py  plot-stats-stack-usage.py  syslog.py
test_system/python/lib/: cli.py
test_system/renode/: RttReader.cs  commands.py  emulate_trc_rtt.resc  emulate_trc_tcp.resc
test_system/scripts/: build.sh  recv-packets.py  run-reflector.sh  run.sh  setup_modality.sh  trace2file.sh
test_system/scripts/rtt/: run_reflector.sh
test_system/scripts/segger/: reset_board.jlink  trace.sh
test_system/scripts/tcp/: run_reflector.sh
test_system/specs/: device.speqtr
test_system/src/: actuator.c  comms.c  led.c  main.c  modality.c  sensor.c  stats.c  trcStreamPort.c
