[package]
name = "modality-trace-recorder-plugin"
version = "0.3.0"
edition = "2021"
authors = ["Jon Lamb <jon@auxon.io>"]
description = "A Modality reflector plugin suite and ingest adapter library for Percepio's TraceRecorder data"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-trace-recorder-plugin"
documentation = "https://docs.rs/modality-trace-recorder-plugin"

[lib]
name = "modality_trace_recorder_plugin"
path = "src/lib.rs"

[[bin]]
name = "modality-trace-recorder-importer"
path = "src/bin/importer.rs"

[[bin]]
name = "modality-trace-recorder-tcp-collector"
path = "src/bin/tcp_collector.rs"

[[bin]]
name = "modality-trace-recorder-itm-collector"
path = "src/bin/itm_collector.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "signal", "tracing"] }
thiserror = "1"
derive_more = "0.99"
hex = "0.4"
dirs = "4"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
humantime = "2"
async-trait = "0.1"
serde = { version = "1.0", features=["derive"] }
serde_with = "2.0"
itm = { git = "https://github.com/rtic-scope/itm.git", default-features = false }
probe-rs = { git = "https://github.com/probe-rs/probe-rs.git" }
goblin = "0.5"
clap = { version = "3.2", features = ["derive", "env"] }
ctrlc = { version = "3.2", features=["termination"] }
exitcode = "1"
modality-api = "0.1"
modality-ingest-client = "0.2"
modality-ingest-protocol = "0.1"
modality-reflector-config = "0.2"
trace-recorder-parser = "0.2"

[dev-dependencies]
tempfile = "3.3"
pretty_assertions = "1.2"

[profile.release]
strip="debuginfo"
