[package]
name = "modality-trace-recorder-plugin"
version = "0.15.0"
edition = "2021"
authors = ["Jon Lamb <jon@auxon.io>"]
description = "A Modality reflector plugin suite and ingest adapter library for Percepio's TraceRecorder data"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-trace-recorder-plugin"
documentation = "https://docs.rs/modality-trace-recorder-plugin"
exclude = ["test_system/"]

[lib]
name = "modality_trace_recorder_plugin"
path = "src/lib.rs"

[[bin]]
name = "modality-trace-recorder-importer"
path = "src/bin/importer.rs"

[[bin]]
name = "modality-trace-recorder-tcp-collector"
path = "src/bin/tcp_collector.rs"

[[bin]]
name = "modality-trace-recorder-itm-collector"
path = "src/bin/itm_collector.rs"

[[bin]]
name = "modality-trace-recorder-rtt-collector"
path = "src/bin/rtt_collector.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "signal", "tracing"] }
thiserror = "1"
derive_more = "0.99"
hex = "0.4"
dirs = "5"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
humantime = "2"
byteordered = "0.6"
async-trait = "0.1"
serde = { version = "1.0", features=["derive"] }
serde_with = "3.6"
itm = "0.9.0-rc.1"
probe-rs = "0.23"
goblin = "0.8"
clap = { version = "4.5", features = ["derive", "env", "color"] }
ctrlc = { version = "3.4", features=["termination"] }
exitcode = "1"
ratelimit = "0.9"
human_bytes = "0.4"
simple_moving_average = "1.0"
auxon-sdk = { version = "1.3", features = ["modality"] }
trace-recorder-parser = "0.6"

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
strip="debuginfo"

[patch.crates-io]
nusb = { git = "https://github.com/jonlamb-gh/nusb.git", branch = "update-ioctl-code" }
