[package]
name = "modality-trace-recorder-plugin"
version = "0.31.0"
edition = "2021"
authors = ["Jon Lamb <jon@auxon.io>"]
description = "A Modality reflector plugin suite and ingest adapter library for Percepio's TraceRecorder data"
license = "Apache-2.0"
repository = "https://github.com/auxoncorp/modality-trace-recorder-plugin"
documentation = "https://docs.rs/modality-trace-recorder-plugin"
exclude = ["test_system/"]

[lib]
name = "modality_trace_recorder_plugin"
path = "src/lib.rs"

[[bin]]
name = "modality-trace-recorder-importer"
path = "src/bin/importer.rs"

[[bin]]
name = "modality-trace-recorder-tcp-collector"
path = "src/bin/tcp_collector.rs"

[[bin]]
name = "modality-trace-recorder-itm-collector"
path = "src/bin/itm_collector.rs"

[[bin]]
name = "modality-trace-recorder-rtt-collector"
path = "src/bin/rtt_collector.rs"

[[bin]]
name = "modality-trace-recorder-proxy-collector"
path = "src/bin/proxy_collector.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "io-util", "net", "signal", "tracing"] }
thiserror = "1"
derive_more = "0.99"
hex = "0.4"
dirs = "5"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
humantime = "2"
byteordered = "0.6"
async-trait = "0.1"
serde = { version = "1.0", features=["derive"] }
serde_with = "3.6"
serde_json = "1.0"
itm = "0.9.0-rc.1"
#probe-rs = "0.24"
goblin = "0.8"
clap = { version = "4.5", features = ["derive", "env", "color"] }
clap-num = "1.1"
ctrlc = { version = "3.4", features=["termination"] }
exitcode = "1"
ratelimit = "0.9"
bytes = "1"
human_bytes = "0.4"
simple_moving_average = "1.0"
auxon-sdk = { version = "1.3", features = ["modality"] }
trace-recorder-parser = "0.19.0"

probe-rs = { git = "https://github.com/auxoncorp/probe-rs.git", branch = "s32k3xx" }
rtt-proxy = { git = "https://github.com/auxoncorp/trace-recorder-rtt-proxy.git", branch = "main" }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
strip="debuginfo"

[patch.crates-io]
hidapi = { git = "https://github.com/auxoncorp/hidapi-rs.git", branch = "builds-with-rustc-1.76" }
